Fixed sizing issues on smaller devices other pages

--- a/style/contact.css
+++ b/style/contact.css
@@ -306,25 +306,62 @@ footer a {
 }
 
 @media only screen and (max-width: 890px) {
-    html, body {
+  html, body {
       font-size: 50%;
   }
-  
-  nav img {
-      display: none;
+
+  nav {
+    width: 0vw;
+    height: 100%;
+}
+  nav a {
+    font-size: 3rem;
+    padding: 2% 0;
   }
-  
-  nav ul{
-      justify-content: center;
-  }
-  
-  .nav-links {
-      flex: 0 1;
-      flex-basis: 90%;;
-      margin: 0 auto;
-  }
-  
+
+.show {
+    width: 20vw;
+    left: 80%;
+}
+
   main {
-      min-height: calc(100vh - 32vh);
+    min-height: calc(100vh - 60vh);
+    width: 100%;
+}
+
+.burger {
+  margin-left: 25%;
+  margin-right: 0;
+  display: inline-block;
+  cursor: pointer;
+  z-index: 3;
+  transition: .5s;
+}
+
+.change .burger {
+  margin-right: 20%;
+}
+
+  main h1 {
+    margin-top: 10%;
+  }
+
+  footer {
+    min-height: 60vh;
+    flex-flow: column;
+    justify-content: space-evenly;
+}
+  .copy {
+    flex: none;
+  }
+  footer .social {
+    flex-flow: column;
+    flex: none;
+}
+
+  .footer-nav {
+    flex: none;
   }
   }
+
+  
