--- a/style/projects.css
+++ b/style/projects.css
@@ -366,18 +366,39 @@ footer a {
     font-size: 50%;
 }
 
-nav img {
-    display: none;
+nav {
+  width: 0vw;
+  height: 100%;
+}
+nav a {
+  font-size: 2rem;
+  padding: 2% 0;
 }
 
-nav ul{
-    justify-content: center;
+.show {
+  width: 20vw;
+  left: 80%;
 }
 
-.nav-links {
-    flex: 0 1;
-    flex-basis: 90%;;
-    margin: 0 auto;
+main {
+  min-height: calc(100vh - 60vh);
+}
+
+.burger {
+margin-left: 25%;
+margin-right: 0;
+display: inline-block;
+cursor: pointer;
+z-index: 3;
+transition: .5s;
+}
+
+.change .burger {
+margin-right: 20%;
+}
+
+main h1 {
+  margin-top: 10%;
 }
 
 .two {
@@ -394,4 +415,20 @@ nav ul{
   order: 2;
 }
 
+footer {
+  min-height: 60vh;
+  flex-flow: column;
+  justify-content: space-evenly;
+}
+.copy {
+  flex: none;
+}
+footer .social {
+  flex-flow: column;
+  flex: none;
+}
+
+.footer-nav {
+  flex: none;
+}
 }
